2020-12-12 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSSearchField.m,
	* Source/NSSearchFieldCell.m: Small cleanups in formatting and
	int types.

2020-12-11 Riccardo Mottola <rm@gnu.org>

	* Source/GSToolbarView.m,
	Use centerScanRect to correct Items frame and avoid flickering.

2020-12-06 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSToolbarFrameworkPrivate.h,
	* Source/GSToolbarView.m,
	* Source/NSToolbar.m: Minor changes to format code, remove unused
	methods and introduce some new helper methods.

2020-11-29 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSMenuView.m (-mouseDown:): Protect against _window going
	away during tracking.

2020-11-23 Riccardo Mottola <rm@gnu.org>
	* Source/NSPopUpButtonCell.m (release):
	Use standard setMenu: in release and avoid leaking the Menu. (Proposed by Fred)

2020-11-03 Riccardo Mottola <rm@gnu.org>

	* Source/NSBitmapImageRep+JPEG.m (_JPEGRepresentationWithProperties:):
	Support greyscape output colorspace in JPEG decompression, fix Alpha output do NO, since JPEGs do not support it.

2020-10-18 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSTableView.m (-validateEditing): Reset _isValidating on
	intermediate return.
	Patch by Andreas Höschler <ahoesch@smartsoft.de>.

2020-10-04 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSColor.m: Protect against theme colour list missing out
	on default colours.

2020-09-14 Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSToolTips.m: Revert bogus last commit.

2020-09-12 Gregory John Casamento <greg.casamento@gmail.com>

	* Source/GSToolTips.m: Fix issue where setting the theme causes
	tooltips to become all black.  This is happening on windows and other
	platforms.
	* Source/NSCell.m: Fix for issue on Windows were contents are reset
	when initWithCoder: coder is called.  If the contents are set, they
	determine the type.  Currently investigating why this is occuring
	ONLY on Windows.

2020-09-12 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSTextView.m (-initWithCoder:): Make sure text container is